2.1.21
 * Paged Range Slice queries with DISTINCT can drop rows from results (CASSANDRA-14956)
 * Update release checksum algorithms to SHA-256, SHA-512 (CASSANDRA-14970)
 * Check checksum before decompressing data (CASSANDRA-14284)
 * CVE-2017-5929 Security vulnerability in Logback warning in NEWS.txt (CASSANDRA-14183)

2.1.20
 * Protect against overflow of local expiration time (CASSANDRA-14092)
 * More PEP8 compliance for cqlsh (CASSANDRA-14021)
 * RPM package spec: fix permissions for installed jars and config files (CASSANDRA-14181)

2.1.19
 * Add storage port options to sstableloader (CASSANDRA-13844)
 * Remove stress-test target in CircleCI as it's not existing (CASSANDRA-13775) 
 * Clone HeartBeatState when building gossip messages. Make its generation/version volatile (CASSANDRA-13700)


2.1.18
 * Fix 2ndary indexes on primary key columns to don't create expiring entries (CASSANDRA-13412)
 * Set javac encoding to utf-8 (CASSANDRA-13466)
 * Fix 2ndary index queries on partition keys for tables with static columns (CASSANDRA-13147)
 * Fix ParseError unhashable type list in cqlsh copy from (CASSANDRA-13364)
 * Log stacktrace of uncaught exceptions (CASSANDRA-13108)
 * Remove unused repositories (CASSANDRA-13278)

2.1.17
 * Use portable stderr for java error in startup (CASSANDRA-13211)
 * Fix Thread Leak in OutboundTcpConnection (CASSANDRA-13204)
 * Coalescing strategy can enter infinite loop (CASSANDRA-13159)
 * Upgrade netty version to fix memory leak with client encryption (CASSANDRA-13114)
 * Fix paging for DISTINCT queries on partition keys and static columns (CASSANDRA-13017)
 * Fix race causing infinite loop if Thrift server is stopped before it starts listening (CASSANDRA-12856)
 * cqlsh copy-from: sort user type fields in csv (CASSANDRA-12959)
 * Fix missed signal when commit log segments are recycled (CASSANDRA-13037)
 * Fix RecoveryManagerTruncateTest (CASSANDRA-12802)
 * Don't skip sstables based on maxLocalDeletionTime (CASSANDRA-12765)


2.1.16